--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -11,3 +11,96 @@
   --font-weight-regular: 400;
   --font-weight-bold: 700;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body {
+  height: 100%;
+  background: var(--background-body);
+  line-height: 1.5;
+  color: var(--font-color);
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-regular);
+}
+
+li {
+  text-decoration: none;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 0.3875fr 1.6125fr;
+}
+
+#sidebar {
+  height: 100%;
+  border-right: 1px solid var(--border);
+  background: var(--background-nav);
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  gap: 50px;
+}
+
+#sidebar img {
+  width: 113px;
+}
+
+#sidebar nav {
+  width: 100%;
+}
+
+#sidebar img {
+  width: 40.8%;
+}
+
+#sidebar img,
+#sidebar nav h2 {
+  margin-left: 2.219em;
+}
+
+#sidebar nav h2 {
+  width: 100%;
+  text-transform: uppercase;
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-medium);
+}
+
+#sidebar .sidebar-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 44px;
+}
+
+main {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-header {
+  width: 100%;
+  height: 70px;
+  background: var(--background-nav);
+  border-bottom: 1px solid var(--border);
+}
+
+.main-content {
+  width: 100%;
+  height: 100%;
+}
