--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -87,3 +87,9 @@ main .main-content {
   width: 100%;
   height: 100%;
 }
+
+@media screen and (max-width: 810px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+}
