--- a/frontend/app/components/Sidebar/styles.css
+++ b/frontend/app/components/Sidebar/styles.css
@@ -38,3 +38,10 @@
   flex-direction: column;
   gap: 44px;
 }
+@media screen and (max-width: 810px) {
+  #sidebar {
+    width: 0;
+    position: absolute;
+    z-index: 9999;
+  }
+}
