--- a/frontend/app/components/Sidebar/styles.css
+++ b/frontend/app/components/Sidebar/styles.css
@@ -8,6 +8,17 @@
   gap: 50px;
 }
 
+#sidebar .nav-top {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+#sidebar .nav-top #close-sidebar-icon {
+  display: none;
+  width: 15px;
+  cursor: pointer;
+}
 
 #sidebar #logo {
   width: 40.8%;
@@ -38,10 +49,24 @@
   flex-direction: column;
   gap: 44px;
 }
+
 @media screen and (max-width: 810px) {
   #sidebar {
     width: 0;
     position: absolute;
     z-index: 9999;
+  }
+
+  #sidebar.open {
+    width: 100%;
+    max-width: 227px;
+  }
+
+  #sidebar.open .nav-top #close-sidebar-icon {
+    display: block;
+  }
+
+  #sidebar .nav-top #close-sidebar-icon {
+    display: none;
   }
 }
