--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -40,7 +40,12 @@ li {
   text-decoration: none;
 }
 
+ul li {
+  list-style-type: none;
+}
+
 input[type="search"] {
+  width: 100%;
   border: none;
   outline: none;
   font-size: var(--font-size-large);
@@ -54,16 +59,14 @@ input[type="search"]::placeholder {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 0.3875fr 1.6125fr;
+  grid-template-columns: 1fr;
 }
 
 main {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
 }
 
-main .main-header {
+main #main-header {
   width: 100%;
   height: 70px;
   background: var(--background-nav);
@@ -71,44 +74,67 @@ main .main-header {
   display: flex;
   align-items: center;
   padding-left: 3.94em;
+  justify-content: space-between;
+  padding: 0 1.95em;
+  gap: 10px;
 }
 
-main .main-header #open-sidebar-icon {
-  display: none;
+main #main-header #open-sidebar-icon {
+  display: block;
+  width: 24px;
 }
 
-main .main-header .search-input-container {
+main #main-header .search-input-container {
   display: flex;
   align-items: center;
   gap: 13.27px;
 }
 
-main .main-header .search-input-container .search-icon {
+main #main-header .search-input-container .search-icon {
   background-color: #bdbdcf;
 }
 
-main .main-content {
+main #main-content {
   width: 100%;
   height: 100%;
+  padding: 0 4em;
+  padding-top: 3.3em;
 }
 
-@media screen and (max-width: 810px) {
+main #main-content h1 {
+  margin-bottom: 30px;
+}
+
+main #main-content {
+  width: 100%;
+  height: 100%;
+  padding: 0 1em;
+  padding-top: 1.3em;
+}
+
+@media screen and (min-width: 810px) {
   .container {
-    grid-template-columns: 1fr;
+    grid-template-columns: 0.3875fr 1.6125fr;
   }
 
   main {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  main #main-header #open-sidebar-icon {
+    display: none;
+  }
+
+  main #main-content {
     width: 100%;
+    height: 100%;
+    padding: 0 4em;
+    padding-top: 3.3em;
   }
 
-  main .main-header {
-    justify-content: space-between;
-    padding: 0 1.95em;
-    gap: 10px;
-  }
-
-  main .main-header #open-sidebar-icon {
-    display: block;
-    width: 24px;
+  main #main-content h1 {
+    margin-bottom: 30px;
   }
 }
